syntax = "proto3";

option csharp_namespace = "User.Infra.GRPC";

package user;

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
  string id = 1;
  string customerDocument = 2;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string costumerDocument = 4;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string costumerDocument = 3;
  string phoneNumber = 4;
  int64 yearsOld = 5;
}

message CreateUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string costumerDocument = 4;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
  string costumerDocument = 4;
  string phoneNumber = 5;
  int64 yearsOld = 6;
}

message UpdateUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string costumerDocument = 4;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string id = 1;
}
